--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -7,7 +7,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg-6 mb-4 mb-lg-0 wow zoomIn" data-wow-delay="0.1s">
-                        <img class="img-fluid" src="{{ url_for('static', filename='css/images/bbb.jpg') }}" alt="">
+                        <img class="media img-fluid" src="{{ url_for('static', filename='css/images/bbb.jpg') }}" alt="">
                     </div>
                     <div class="col-12 col-lg-6 text-center text-lg-left wow zoomIn" data-wow-delay="0.1s">
                         <div class="about-card mb-3">
