--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -18,7 +18,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-image: url("images/bbb.jpg");
+  background-image: url("images/on.jpg");
   background-attachment: fixed;
   min-height: 100vh;
   color: white;
