--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -105,7 +105,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-image: url("images/fff.jpg");
+  background-image: url("images/ml.jpg");
   background-attachment: fixed;
   color: #eee;
 }
