--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -147,7 +147,7 @@ body {
 #section-services .service-card .card-body {
   height: 150px;
   color: #000;
-  background: rgba(255, 255, 255, 0.2);
+  background-color: transparent;
 }
 
 /*  gallery */
