--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -253,42 +253,42 @@
         <h2 class="section-header">Наши мастера</h2>
         <div class="container">
             <div class="row">
-                <div class="team-card col-12 col-md-6 col-lg-4">
+                <div class="team-card col-12 col-md-6 col-lg-4 wow slideInRight" data-wow-delay="0.5s">
                     <img src="{{ url_for('static', filename='css/images/elena.jpg') }}" class="rounded-circle" alt="" />
                     <div class="team-card__name">
                         Елена <a href="https://wa.me/79275328249/" title="Позвонить" target="_blank"><i class="fab fa-whatsapp"></i></a>
                     </div>
                     <div class="team-card__category">Парикмахер</div>
                 </div>
-                <div class="team-card col-12 col-md-6 col-lg-4">
+                <div class="team-card col-12 col-md-6 col-lg-4 wow slideInLeft" data-wow-delay="0.5s">
                     <img src="{{ url_for('static', filename='css/images/daha.jpg') }}" class="rounded-circle" alt="" />
                     <div class="team-card__name">
                         Дарья <a href="https://wa.me/79370870538/" title="Позвонить" target="_blank"><i class="fab fa-whatsapp"></i></a>
                     </div>
                     <div class="team-card__category">Парикмахер</div>
                 </div>
-                <div class="team-card col-12 col-md-6 col-lg-4">
+                <div class="team-card col-12 col-md-6 col-lg-4 wow slideInRight" data-wow-delay="0.5s">
                     <img src="{{ url_for('static', filename='css/images/mari.jpg') }}" class="rounded-circle" alt="" />
                     <div class="team-card__name">
                         Марина <a href="https://wa.me/79377233024/" title="Позвонить" target="_blank"><i class="fab fa-whatsapp"></i></a>
                     </div>
                     <div class="team-card__category">Парикмахер, Барбер</div>
                 </div>
-                <div class="team-card col-12 col-md-6 col-lg-4">
+                <div class="team-card col-12 col-md-6 col-lg-4 wow slideInLeft" data-wow-delay="0.5s">
                     <img src="{{ url_for('static', filename='css/images/vika.jpg') }}" class="rounded-circle" alt="" />
                     <div class="team-card__name">
                         Виктория <a href="https://wa.me/79275083260/" title="Позвонить" target="_blank"><i class="fab fa-whatsapp"></i></a>
                     </div>
                     <div class="team-card__category">Мастер маникюра</div>
                 </div>
-                <div class="team-card col-12 col-md-6 col-lg-4">
+                <div class="team-card col-12 col-md-6 col-lg-4 wow slideInRight" data-wow-delay="0.5s">
                     <img src="{{ url_for('static', filename='css/images/eka.jpg') }}" class="rounded-circle" alt="" />
                     <div class="team-card__name">
                         Екатерина <a href="https://wa.me/79370969944/" title="Позвонить" target="_blank"><i class="fab fa-whatsapp"></i></a>
                     </div>
                     <div class="team-card__category">Визажист</div>
                 </div>
-                <div class="team-card col-12 col-md-6 col-lg-4">
+                <div class="team-card col-12 col-md-6 col-lg-4 wow slideInLeft" data-wow-delay="0.5s">
                     <img src="{{ url_for('static', filename='css/images/maha.jpg') }}" class="rounded-circle" alt="" />
                     <div class="team-card__name">
                         Мария <a href="https://wa.me/79997448789/" title="Позвонить" target="_blank"><i class="fab fa-whatsapp"></i></a>
