--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -148,6 +148,7 @@ body {
   height: 150px;
   color: #000;
   background-color: transparent;
+  background-image: url(./images/cb.jpg);
 }
 
 /*  gallery */
