--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -150,6 +150,9 @@ body {
   background-color: transparent;
   background-image: url(./images/cb.jpg);
 }
+.gap {
+  border-color: aqua;
+}
 
 /*  gallery */
 #section-gallery {
