--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -122,6 +122,11 @@ body {
 
 
 
+@media (max-width: 500px) {
+  #header__content {
+    background-attachment: local;
+    background-image: url("images/component1.png");
+  }
 }
 @media (max-width: 960px) {
   #header__content {
