--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -262,6 +262,13 @@ text-shadow: 1px 1px 1px black;
     background-attachment: local;
   }
 }
+@media (max-width: 500px) {
+  #header__content {
+    background-attachment: local;
+    background-repeat: repeat;
+    background-image: url("images/component2.png");
+  }
+}
 #section-gallery .gallery-img img {
   transition: all ease-in-out 0.3s;
 }
