--- a/app/templates/includes/main.html
+++ b/app/templates/includes/main.html
@@ -1,5 +1,5 @@
 <nav id="main-nav" class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand mb-0 h1" href="/"> <img class=" img-fluid" src="{{ url_for('static', filename='css/images/lable.png') }}" alt=""></a>
+    <a class="navbar-brand mb-0 h1" href="/">Beauty Room</a>
     <span class="navbar-text d-none d-sm-inline-block d-lg-none d-xl-inline-block">{{ site_short_description }}</span>
 
     <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent">
